fixed button alignment

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -65,6 +65,7 @@
     display:flex;
     flex-direction:row;
     justify-content:right;
+    padding:0.2rem;
 
     // border: pink solid 1px;
 }
